db.statefuleset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefuleset
spec:
  selector:
    matchLabels:
      app: db 
  serviceName: "db"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: db
        image: postgres:16
        ports:
        - containerPort: 80
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
