k8rest.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8rest-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8rest
  template:
    metadata:
      labels:
        app: k8rest
    spec:
      volumes:
      - name: env-configmap
        configMap:
          name: env-configmap
      containers:
      - name: k8rest
        image: k8rest:1.0.2
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: env-configmap
          mountPath: /etc/k8rest
          readOnly: true
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
